# launcher

./: .gitignore  Cargo.toml  README.md  manifest.json
src/: dependency.rs  downloadable.rs  jre.rs  json.rs  main.rs  platform.rs
