[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
json = "0.12.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
reqwest = {version = "0.12.22", features = ["blocking"]}
url = "2.5.7"
tokio = {version = "1.47.1", features = ["full"]}
tempfile = "3.21.0"
zip = "4.5.0"
log = "0.4.27"
fern = "0.7.1"
chrono = "0.4.41"